@@ -1,5 +1,5 @@
 /*
- * Copyright 2015 - 2022 Anton Tananaev (anton@traccar.org)
+ * Copyright 2015 - 2025 Anton Tananaev (anton@traccar.org)
  * Copyright 2016 Gabor Somogyi (gabor.g.somogyi@gmail.com)
  * Copyright 2017 Andrey Kunitsyn (andrey@traccar.org)
  *
@@ -17,11 +17,15 @@
  */
 package org.traccar.api.resource;
 
+import jakarta.servlet.http.HttpServletRequest;
+import jakarta.ws.rs.core.Context;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
 import org.traccar.BaseProtocol;
 import org.traccar.ServerManager;
 import org.traccar.api.ExtendedObjectResource;
+import org.traccar.command.CommandSender;
+import org.traccar.command.CommandSenderManager;
 import org.traccar.database.CommandsManager;
 import org.traccar.helper.LogAction;
 import org.traccar.helper.model.DeviceUtil;
@@ -53,7 +57,6 @@ import java.util.ArrayList;
 import java.util.Collection;
 import java.util.Collections;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Path("commands")
 @Produces(MediaType.APPLICATION_JSON)
@@ -67,6 +70,15 @@ public class CommandResource extends ExtendedObjectResource<Command> {
 
     @Inject
     private ServerManager serverManager;
+
+    @Inject
+    private LogAction actionLogger;
+
+    @Inject
+    private CommandSenderManager commandSenderManager;
+
+    @Context
+    private HttpServletRequest request;
 
     public CommandResource() {
         super(Command.class, "description");
@@ -103,7 +115,7 @@ public class CommandResource extends ExtendedObjectResource<Command> {
             } else {
                 return type.equals(Command.TYPE_CUSTOM);
             }
-        }).collect(Collectors.toList());
+        }).toList();
     }
 
     @POST
@@ -142,7 +154,7 @@ public class CommandResource extends ExtendedObjectResource<Command> {
             }
         }
 
-        LogAction.command(getUserId(), groupId, entity.getDeviceId(), entity.getType());
+        actionLogger.command(request, getUserId(), groupId, entity.getDeviceId(), entity.getType());
         return Response.ok(entity).build();
     }
 
@@ -153,12 +165,20 @@ public class CommandResource extends ExtendedObjectResource<Command> {
             @QueryParam("textChannel") boolean textChannel) throws StorageException {
         if (deviceId != 0) {
             permissionsService.checkPermission(Device.class, getUserId(), deviceId);
+
+            Device device = storage.getObject(Device.class, new Request(
+                    new Columns.All(), new Condition.Equals("id", deviceId)));
+            CommandSender sender = commandSenderManager.getSender(device);
+            if (sender != null) {
+                return sender.getSupportedCommands().stream().map(Typed::new).toList();
+            }
+
             BaseProtocol protocol = getDeviceProtocol(deviceId);
             if (protocol != null) {
                 if (textChannel) {
-                    return protocol.getSupportedTextCommands().stream().map(Typed::new).collect(Collectors.toList());
+                    return protocol.getSupportedTextCommands().stream().map(Typed::new).toList();
                 } else {
-                    return protocol.getSupportedDataCommands().stream().map(Typed::new).collect(Collectors.toList());
+                    return protocol.getSupportedDataCommands().stream().map(Typed::new).toList();
                 }
             } else {
                 return Collections.singletonList(new Typed(Command.TYPE_CUSTOM));
