@@ -1,5 +1,5 @@
 /*
- * Copyright 2022 - 2023 Anton Tananaev (anton@traccar.org)
+ * Copyright 2022 - 2025 Anton Tananaev (anton@traccar.org)
  *
  * Licensed under the Apache License, Version 2.0 (the "License");
  * you may not use this file except in compliance with the License.
@@ -15,6 +15,7 @@
  */
 package org.traccar.storage;
 
+import org.traccar.helper.ReflectionCache;
 import org.traccar.model.BaseModel;
 import org.traccar.model.Pair;
 import org.traccar.model.Permission;
@@ -22,7 +23,6 @@ import org.traccar.model.Server;
 import org.traccar.storage.query.Condition;
 import org.traccar.storage.query.Request;
 
-import java.beans.Introspector;
 import java.lang.reflect.Method;
 import java.util.Collection;
 import java.util.HashMap;
@@ -31,7 +31,7 @@ import java.util.List;
 import java.util.Map;
 import java.util.Set;
 import java.util.concurrent.atomic.AtomicLong;
-import java.util.stream.Collectors;
+import java.util.stream.Stream;
 
 public class MemoryStorage extends Storage {
 
@@ -49,10 +49,16 @@ public class MemoryStorage extends Storage {
 
     @Override
     public <T> List<T> getObjects(Class<T> clazz, Request request) {
+        try (var objects = getObjectsStream(clazz, request)) {
+            return objects.toList();
+        }
+    }
+
+    @Override
+    public <T> Stream<T> getObjectsStream(Class<T> clazz, Request request) {
         return objects.computeIfAbsent(clazz, key -> new HashMap<>()).values().stream()
                 .filter(object -> checkCondition(request.getCondition(), object))
-                .map(object -> (T) object)
-                .collect(Collectors.toList());
+                .map(object -> (T) object);
     }
 
     private boolean checkCondition(Condition genericCondition, Object object) {
@@ -62,7 +68,7 @@ public class MemoryStorage extends Storage {
 
         if (genericCondition instanceof Condition.Compare condition) {
 
-            Object value = retrieveValue(object, condition.getVariable());
+            Object value = retrieveValue(object, condition.getColumn());
             int result = ((Comparable) value).compareTo(condition.getValue());
             return switch (condition.getOperator()) {
                 case "<" -> result < 0;
@@ -75,9 +81,9 @@ public class MemoryStorage extends Storage {
 
         } else if (genericCondition instanceof Condition.Between condition) {
 
-            Object fromValue = retrieveValue(object, condition.getFromVariable());
+            Object fromValue = retrieveValue(object, condition.getColumn());
             int fromResult = ((Comparable) fromValue).compareTo(condition.getFromValue());
-            Object toValue = retrieveValue(object, condition.getToVariable());
+            Object toValue = retrieveValue(object, condition.getColumn());
             int toResult = ((Comparable) toValue).compareTo(condition.getToValue());
             return fromResult >= 0 && toResult <= 0;
 
@@ -112,8 +118,7 @@ public class MemoryStorage extends Storage {
 
     private Object retrieveValue(Object object, String key) {
         try {
-            Method method = object.getClass().getMethod(
-                    "get" + Character.toUpperCase(key.charAt(0)) + key.substring(1));
+            Method method = ReflectionCache.getProperties(object.getClass(), "get").get(key).method();
             return method.invoke(object);
         } catch (ReflectiveOperationException e) {
             throw new RuntimeException(e);
@@ -129,7 +134,6 @@ public class MemoryStorage extends Storage {
 
     @Override
     public <T> void updateObject(T entity, Request request) {
-        Set<String> columns = new HashSet<>(request.getColumns().getColumns(entity.getClass(), "get"));
         Collection<Object> items;
         if (request.getCondition() != null) {
             long id = (Long) ((Condition.Equals) request.getCondition()).getValue();
@@ -137,18 +141,17 @@ public class MemoryStorage extends Storage {
         } else {
             items = objects.computeIfAbsent(entity.getClass(), key -> new HashMap<>()).values();
         }
-        for (Method setter : entity.getClass().getMethods()) {
-            if (setter.getName().startsWith("set") && setter.getParameterCount() == 1
-                    && columns.contains(Introspector.decapitalize(setter.getName()))) {
-                try {
-                    Method getter = entity.getClass().getMethod(setter.getName().replaceFirst("set", "get"));
-                    Object value = getter.invoke(entity);
-                    for (Object object : items) {
-                        setter.invoke(object, value);
-                    }
-                } catch (ReflectiveOperationException e) {
-                    throw new RuntimeException(e);
+        var getters = ReflectionCache.getProperties(entity.getClass(), "get");
+        var setters = ReflectionCache.getProperties(entity.getClass(), "set");
+        for (String column : request.getColumns().getColumns(entity.getClass(), "get")) {
+            try {
+                Method setter = setters.get(column).method();
+                Object value = getters.get(column).method().invoke(entity);
+                for (Object object : items) {
+                    setter.invoke(object, value);
                 }
+            } catch (ReflectiveOperationException e) {
+                throw new RuntimeException(e);
             }
         }
     }
@@ -171,7 +174,7 @@ public class MemoryStorage extends Storage {
                 .filter(pair -> ownerId == 0 || pair.first().equals(ownerId))
                 .filter(pair -> propertyId == 0 || pair.second().equals(propertyId))
                 .map(pair -> new Permission(ownerClass, pair.first(), propertyClass, pair.second()))
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Override
